# audioguide

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml
src/: main.py
src/services/: translation.py
